--- a/src/Cookie2Json/style.css
+++ b/src/Cookie2Json/style.css
@@ -100,10 +100,12 @@
 .content-container {
   display: flex;
   flex: 1;
-  width: 100%;
-  justify-content: space-evenly;
+  width: calc(100% - 80px);
+  justify-content: space-between;
   padding: 20px 0;
   overflow: hidden;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .history-container {
@@ -352,19 +354,17 @@
 }
 
 .input-container {
-  width: 40%;
-  max-width: 500px;
+  width: calc(50% - 15px);
   display: flex;
   flex-direction: column;
-  padding: 20px 0;
+  padding: 0;
 }
 
 .output-container {
-  width: 40%;
-  max-width: 500px;
+  width: calc(50% - 15px);
   display: flex;
   flex-direction: column;
-  padding: 20px 0;
+  padding: 0;
 }
 
 .cookie-input {
@@ -385,6 +385,7 @@
   color: var(--text-color);
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
   outline: none;
+  box-sizing: border-box;
 }
 
 .cookie-input:empty:before {
@@ -415,6 +416,7 @@
   margin-bottom: 10px;
   color: var(--text-color);
   outline: none;
+  box-sizing: border-box;
 }
 
 /* JSON语法高亮样式 */
