--- a/src/Cookie2Json/style.css
+++ b/src/Cookie2Json/style.css
@@ -884,7 +884,8 @@
   font-size: 13px;
   resize: vertical;
   overflow-y: auto;
-  height: auto;
+  height: 100px;
+  transition: height 0.08s cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
 .history-item-content-input:focus {
